# RecordKit

./: .gitignore  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioConfig.cpp  AudioConfig.h  AudioEngine.cpp  AudioEngine.h  AudioEngineCallback.cpp  AudioEngineCallback.h  BlockingQueue.h  CMakeLists.txt  Log.h  RecordingCallBack.cpp  RecordingCallBack.h  SoundRecording.cpp  SoundRecording.h  Test.cpp  Test.h  jni_bridge.cpp  native-lib.cpp
app/src/main/cpp/fft/: FFTHelper.cpp  FFTHelper.h
app/src/main/cpp/global/: GlobalConfig.h
app/src/main/cpp/utils/: SysUtils.cpp  SysUtils.h
app/src/main/cpp/wave/: WaveFormat.cpp  WaveFormat.h
app/src/main/java/com/lq/record/: FFTView.java  LEngine.java  LEngineCallback.java  LimitQueue.java  MainActivity.java  PcmOriginView.java  Spectrum.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
oboe-bin/: cmake_install.cmake
oboe-core/oboe-bin/: cmake_install.cmake
speex-core/: CMakeLists.txt
speex-core/include/speex/: speexdsp_config_types.h
speex-core/libspeexdsp/: kiss_fft.h
